Fixed swal z-index

--- a/client/src/css/components/hamburger.css
+++ b/client/src/css/components/hamburger.css
@@ -1,7 +1,7 @@
 .hamburger {
     position: absolute;
     width: 100%;
-    z-index: 1500;
+    z-index: 1020;
     text-align: left;
 }
 .hamburger > div {
